--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       different genres. He usually writes high concept stories with shades of mystery, and unreliable protagonists with
       similarly messed up moralities.
     </p>
-    <br><br>
+    <br><br><br>
     <p  align=center>
-      <a href="https://amzn.to/3wZHvmt" id=amlink>Buy on Amazon</a>
+      <a href="https://www.amazon.in/Drizzles-Departed-Some-Nights-Forever/dp/1684873266/ref=sr_1_1?crid=1IPE67TYUK35W&keywords=drizzles+departed&qid=1659379495&sprefix=drizzles+departe%2Caps%2C302&sr=8-1" id=amlink>Buy on Amazon</a>
     </p>
     <br><br>
     <hr color=powderblue>
